스프링부트 프로필 홈페이지 프로젝트 - v.0.6

--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -8,3 +8,43 @@ span.content_text {
 	font-weight: bold;
 	
 }
+
+input.input_box {
+	
+	border: 1px solid #0a367a;
+	background-color: #ffffff;
+	width: 200px;
+	padding: 5px;
+	font-family: Arial;
+	font-size: 18px;
+	color: #0a367a;
+	
+}
+
+textarea.questiontext {
+	
+	border: 1px solid #0a367a;
+	background-color: #ffffff;
+	width: 200px;
+	padding: 5px;
+	font-family: Arial;
+	font-size: 18px;
+	color: #0a367a;
+}
+
+input.button {
+	
+	border: 2px solid #ffffff;
+	background-color: #0583e9;
+	width: 170px;
+	padding: 5px;
+	font-family: Arial;
+	font-size: 18px;
+	color: #ecfafd;
+	
+}
+
+input.button:hover {
+	
+	background-color: #0a367a;
+}
