로그인 중인 이름 출력 추가

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -15,6 +15,14 @@ td.header_menu {
 	
 }
 
+span.login_text {
+	
+	font-size: 14px;
+	color: #0a0468;
+	font-family: malgun;	
+	
+}
+
 a:link {
 	
 	text-decoration: none;
